# heavy-coder

./: .dockerignore  .env.EXAMPLE  .gitignore  .hermes.md  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  SOUL.md  config.yaml  distribution.yaml  github-repo-metadata.yaml  pyproject.toml
.github/: pull_request_template.md
agent-hooks/: hook_lib.py  on_session_start_bootstrap.py  post_delegate_task.py  pre_llm_heavy_team.py  pre_tool_heavy_team.py  subagent_stop_evidence.py
docs/: architecture.md  cli-observability.md  coding-standards.md  composer-hermes-swarms.md  demo-vhs.md  development.md  enforcement-model.md  evaluation-plan.md  github-discovery.md  grok-heavy-council.md  ide-terminal-composer.md  identity-safety.md  implementation-backlog.md  plan-1a-shell-hooks.md  quickstart-heavy-team.md  release-checklist.md  security-model.md  state-machine.md
examples/: delegate_tasks_16.sample.json  issue-to-merge.md  issue-to-pr.md  local-interactive.md
plugins/: README.md
schemas/: candidate-result.schema.json  evaluation-result.schema.json  run-state.schema.json
scripts/: apply_github_repo_metadata.py  bootstrap_heavy_team.py  ci_local.sh  critique_candidates.py  demo_vhs_apply_fixture.py  generate_profile.py  heavy_coding_flow.py  ide_safe_chat.sh  render_launch_demos.sh  run_pilot_eval.py  run_pilot_eval.sh  ship_release.sh  swarm_watch.py  sync_profile_hooks.py  sync_vhs_pack.sh  team_coordinator.py  validate_distribution.py  validate_github_repo_metadata.py  (+3 more)
(+123 files in other folders)
