[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "heavy-coder-foundation"
version = "0.1.0"
description = "Deterministic foundations for the Heavy Coder Hermes profile distribution."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "CodeGraphTheory"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.0",
  "mypy>=1.8",
  "ruff>=0.8",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["jsonschema", "yaml"]
ignore_missing_imports = true
